force-app/main/default/objects/Task_Deployment_History__c/Task_Deployment_History__c.object-meta.xml
<CustomObject>
    <label>Task Deployment History</label>
    <nameField>
        <label>Tooling API Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Task Deployment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>