force-app/main/default/objects/Task_Deployment_History__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <label>Code</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>