force-app/main/default/objects/Task_Deployment_History__c/fields/Failure__c.field-meta.xml
<CustomField>
    <fullName>Failure__c</fullName>
    <label>Failure</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>