force-app/main/default/objects/Task_Deployment_History__c/fields/IsFailure__c.field-meta.xml
<CustomField>
    <fullName>IsFailure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Failure</label>
    <type>Checkbox</type>
</CustomField>