force-app/main/default/objects/Task_Deployment_History__c/fields/User_Story_Task__c.field-meta.xml
<CustomField>
    <fullName>User_Story_Task__c</fullName>
    <label>User Story Task</label>
    <referenceTo>User_Story_Task__c</referenceTo>
    <relationshipName>User_Story_Deployment_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>